--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -655,7 +655,7 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
   author={Recker, J. C. and Dreiling, A.},
   title={Does it matter which process modelling language we teach or use? an experimental study on understanding process modelling languages without formal education},
     journal={18th Australasian Conference on Information Systems},
-  pages={356--366, 2007}
+  pages={356--366, 2007},
   publisher={University of Southern Queensland}
 }
 
@@ -696,8 +696,7 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
            title = {Semantically-Driven Workflow Generation using Declarative Modeling for Processes in Software Engineering},
           author = {Grambow, G. and Oberhauser, R. and Reichert, M},
        publisher = {IEEE Computer Society},
-            year = {2011},
-           pages = {164--173}
+           pages = {164--173, 2011}
 }
 
 @article{sabrina795,
@@ -705,8 +704,7 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
           number = {3\&4},
            title = {Contextual Generation of Declarative Workflows and their Application to Software Engineering Processes},
           author = {Grambow, G. and Oberhauser, R. and Reichert, M.},
-            year = {2011},
-           pages = {158--179},
+           pages = {158--179, 2011},
          journal = {Int J on Advances in Intelligent Systems}
 }
 
@@ -715,7 +713,23 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
           number = {1\&2},
            title = {Contextual Injection of Quality Measures into Software Engineering Processes},
           author = {Grambow, G. and Oberhauser, R. and Reichert, M.},
-            year = {2011},
-           pages = {76--99},
+           pages = {76--99, 2011},
          journal = {Int'l Journal on Advances in Software}
          }
+         
+ @article{pinggera2010investigating,
+  title={Investigating the Process of Process Modeling with Cheetah Experimental Platform--Tool Paper--},
+  author={Pinggera, Jakob and Zugal, Stefan and Weber, Barbara},
+  journal={ER-POIS 2010},
+  pages={13},
+  year={2010}
+}
+
+@inproceedings{sabrina933,
+           month = {June},
+          author = {Cornelia Haisjackl and Stefan Zugal and Pnina Soffer and Irit Hadar and Barbara Weber and Jakob Pinggera and Manfred Reichert},
+       booktitle = {Proc. BPMDS'13},
+           title = {Making Sense of Declarative Process Models: Common Strategies and Typical Pitfalls},
+       publisher = {Springer, LNBIP, vol. 147},
+           pages = {2--17, 2013}
+           }
