--- a/Masterarbeit 4/Tex/chapter5.tex
+++ b/Masterarbeit 4/Tex/chapter5.tex
@@ -39,17 +39,17 @@ Hier soll somit ein direkter Vergleich zwischen den imperativen und deklarativen
 
 Die Prozessmodelle, welche jeweils in imperativer und deklarativer Prozessmodellierungssprache erstellt werden, sollen im Hinblick auf ihre Klarheit untersucht werden. Hierbei soll festgestellt werden, ob es wesentliche Unterschiede bei der Verständlichkeit der Prozessmodelle gibt, wenn diese in imperativer, bzw. deklarativer Prozessmodellierungssprache erstellt wurden. Denn fehlende Verständlichkeit eines Prozessmodells führt dazu, dass das Prozessmodell wenig Nutzen bringt \cite{journals95, freund2007,reinshagen2009}. \newline
 In der Studie \cite{gruhn2006adopting} wurden Metriken über den geistigen Aufwand entwickelt, welcher für das Verständnis von BPMN-Notationselementen notwendig ist. Den einzelnen Notationselementen werden dort verschiedene geistige Gewichtungen zugewiesen. Ein Sequenzfluss hat auf Grund des geringen geistigen Aufwandes beim Verstehen eine geistige Gewichtung von 1. Das Exklusive Gateway hat eine geistige Gewichtung von 2, falls es nur zwei ausgehende Kanten hat. Bei drei oder mehr ausgehenden Kanten hat es eine geistige Gewichtung von 3. Das Parallele Gateway hat eine geistige Gewichtung von 4. Einem Inklusiven Gateway wird sogar eine geistige Gewichtung von 7 zugeschrieben \cite{gruhn2006adopting}.\newline
-Leider existieren derzeit noch keine Metriken über den geistigen Aufwand beim Verstehen der einzelnen Constraints bei ConDec. Jedoch gibt es bereits Studien (\cite{thesis_maja,haisjackl2014understanding}), welche sich anderweitig mit dem Verstehen von deklarativen Prozessmodellen auseinandergesetzt haben. In Bezug auf diese Studien werden die nachfolgenden Unterkriterien zum Vergleich der \textit{Klarheit} der einzelnen Prozessmodelle erhoben.
+Leider existieren derzeit noch keine Metriken über den geistigen Aufwand beim Verstehen der einzelnen Constraints bei ConDec. Jedoch gibt es bereits Studien (\cite{thesis_maja,haisjackl2014understanding, sabrina933}), welche sich anderweitig mit dem Verstehen von deklarativen Prozessmodellen auseinandergesetzt haben. In Bezug auf diese Studien werden die nachfolgenden Unterkriterien zum Vergleich der \textit{Klarheit} der einzelnen Prozessmodelle erhoben.
 
 \subsubsection{A 4.1}
-Es soll die Anzahl an Gateways in BPMN und die Anzahl Constraints in ConDec betrachtet werden. Weil alle Gateways in BPMN und alle Constraints in ConDec eine unterschiedliche Sematik haben und diese jeweils verstanden werden muss, kann sich eine hohe Anzahl an Gateways, bzw. Constraints negtiv auf die Verständlichkeit auswirken \cite{gruhn2006adopting, thesis_maja}. \newline
-Da die Existenz-Constraints relativ einfach zu verstehen sind \cite{thesis_maja}, sollen sie beim Vergleich in Kapitel 5 mit den Sequenzflusselementen gleichgesetzt werden und haben somit auch in etwa eine geistige Gewichtung von 1 \cite{thesis_maja,haisjackl2014understanding, gruhn2006adopting}. \newline
+Es soll die Anzahl an Gateways in BPMN und die Anzahl Constraints in ConDec betrachtet werden. Weil alle Gateways in BPMN und alle Constraints in ConDec eine unterschiedliche Sematik haben und diese jeweils verstanden werden muss, kann sich eine hohe Anzahl an Gateways, bzw. Constraints negtiv auf die Verständlichkeit auswirken \cite{gruhn2006adopting, thesis_maja, sabrina933}. \newline
+Da die Existenz-Constraints relativ einfach zu verstehen sind \cite{thesis_maja, sabrina933}, sollen sie beim Vergleich in Kapitel 5 mit den Sequenzflusselementen gleichgesetzt werden und haben somit auch in etwa eine geistige Gewichtung von 1 \cite{thesis_maja,haisjackl2014understanding, gruhn2006adopting,sabrina933}. \newline
 Da die Constraints in ConDec genau wie die Gateways in BPMN Patterns darstellen, müssten sie ebenfalls alle Werte für die geistige Gewichtung zwischen 2 und 7 annehmen. Da die Constraints jedoch nicht direkt den Gateways in BPMN zugeordnet werden können und sich somit die geistigen Gewichtungen der Gateways nicht auf die Constraints übertragen lassen, soll im Vergleich in Kapitel 5 nur die jeweilige Anzahl an Gateways in BPMN mit der Anzahl an Constraints im ConDec-Modell verglichen werden. Es soll somit auch bei den Gateways in BPMN keine Unterscheidung zwischen den Gateways stattfinden \cite{thesis_maja,haisjackl2014understanding, gruhn2006adopting}. \newline
-Zudem soll auch die Anzahl an unterschiedlichen Gateways in BPMN und Constraints in ConDec betrachtet werden. Denn sowohl bei BPMN, als auch bei ConDec wurde in Studien herausgefunden, dass gerade die Kombination von vielen verschiedenen Gateways/Constraints einen sehr großen negativen Einfluss auf das Verstehen hat \cite{gruhn2006adopting, thesis_maja,haisjackl2014understanding}. \newline
+Zudem soll auch die Anzahl an unterschiedlichen Gateways in BPMN und Constraints in ConDec betrachtet werden. Denn sowohl bei BPMN, als auch bei ConDec wurde in Studien herausgefunden, dass gerade die Kombination von vielen verschiedenen Gateways/Constraints einen sehr großen negativen Einfluss auf das Verstehen hat \cite{gruhn2006adopting, thesis_maja,haisjackl2014understanding, sabrina933}. \newline
 Somit sollen beim Vergleich in Kapitel 5 die Anzahl an Sequenzfluss/Existenz Constraints, Gateways/Constraints und unterschiedliche Gateways/Constraints bei den deklarativen und imperativen Modellen direkt gegenüber gestellt werden. Hierbei soll das Kriterium höhere Anzahl an Sequenzfluss/Existenz Constraints einfach gewichtet und die Kriterien höhere Anzahl an Gateways/Constraints und unterschiedliche Gateways/Constraints jeweils doppelt gewichtet werden. Das Modell, welches sodann die höhere Anzahl aufweist, soll als das komplexere Modell eingestuft werden und erfüllt die \textit{Klarheit} dadurch weniger.
 
 \subsubsection{A 4.2}
-Zudem soll untersucht werden, ob bei dem mit ConDec erstellten Modell ein klarer Einstiegspunkt mit Hilfe des Init-Constraints dargestellt werden kann. Das Init-Constraint kann bei ConDec nur einer einzigen Aktivität im Modell zugewiesen werden. Kommen mehrere Aktivitäten als Einstiegspunkt im Modell in Frage, so lassen sich diese in ConDec nicht klar kennzeichnen. Es existieren Studien darüber \cite{haisjackl2014understanding}, dass sich dies negativ auf das Verständnis von ConDec Modellen auswirkt. \newline
+Zudem soll untersucht werden, ob bei dem mit ConDec erstellten Modell ein klarer Einstiegspunkt mit Hilfe des Init-Constraints dargestellt werden kann. Das Init-Constraint kann bei ConDec nur einer einzigen Aktivität im Modell zugewiesen werden. Kommen mehrere Aktivitäten als Einstiegspunkt im Modell in Frage, so lassen sich diese in ConDec nicht klar kennzeichnen. Es existieren Studien darüber \cite{haisjackl2014understanding, sabrina933}, dass sich dies negativ auf das Verständnis von ConDec Modellen auswirkt. \newline
 
 \subsubsection{A 4.3}
 Weiterhin soll hier festgestellt werden, ob es wesentliche Unterschiede in der Verständlichkeit der imperativen und deklarativen Prozessmodelle gibt, in Abhängigkeit der Größe des Prozessmodells. Falls sich Unterschiede in der Verständlichkeit der Prozessmodelle in Abhängigkeit der Größe des Prozessmodelles ergeben, lassen sich hierbei Rückschlüsse auf die Eignung der Prozessmodellierungssprache in Bezug auf große/kleine Modelle ziehen.
