--- a/Masterarbeit 4/Tex/sources.tex
+++ b/Masterarbeit 4/Tex/sources.tex
@@ -35,6 +35,22 @@
 \hline
 \textbf{Constraint} & \textbf{Erläuterung}\\
 \hline
+
+\begin{center}
+  \includegraphics[scale=0.5]{activity} %pdf, jpg, png...
+  \end{center}
+& \textbf{activity} \newline
+Eine Aufgabe ist eine Arbeitseinheit\\
+\hline
+
+\begin{center}
+  \includegraphics[scale=0.5]{comp} %pdf, jpg, png...
+  \end{center}
+& \textbf{complex activity} \newline
+Aktivität wird in zusätzlichen Teilprozess zerlegt\\
+\hline
+
+
 \begin{center}
   \includegraphics[scale=0.5]{absence} %pdf, jpg, png...
   \end{center}
